--- a/frontend/src/app/components/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.scss
@@ -73,6 +73,7 @@ textarea, textarea:focus {
   letter-spacing: normal;
   text-align: left;
   color: #ffffff;
+  max-width: 11.5625rem;
 }
 
 .removeItemCarousel {
