--- a/frontend/src/app/components/claims/claims.component.scss
+++ b/frontend/src/app/components/claims/claims.component.scss
@@ -1,3 +1,88 @@
+.operation-type {
+  width: 12.5rem;
+  border-radius: 0.3125rem;
+  border: 1px solid #d0d0d0;
+  margin-right: 0.3125rem;
+}
+
+.search-btn {
+  width: 200px;
+  border-radius: 5px;
+}
+
+.clear-btn {
+  width: 200px;
+  border-radius: 5px;
+}
+
+.found-text {
+  width: 312px;
+  height: 20px;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: italic;
+  line-height: 0.4;
+  letter-spacing: normal;
+  text-align: center;
+  color: #656c75;
+}
+
+.expanded-search {
+  width: 263px;
+  height: 21px;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.9;
+  letter-spacing: normal;
+  text-align: center;
+  color: #373737;
+}
+
+.panel-header {
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: left;
+  color: #00b2a8;
+}
+
+.panel-header:active,.panel-header:focus,.panel-header:hover,.panel-header:before, .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  color: #00b2a8!important;
+  border-bottom: 1px solid #00b2a8;
+}
+
+table thead {
+  width: 80px;
+  height: 31px;
+  font-size: 16px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: center;
+  color: #858b93;
+}
+
+table tbody {
+  width: 149px;
+  height: 35px;
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.13;
+  letter-spacing: normal;
+  text-align: center;
+  color: #767d86;
+}
+
 .ng-select.custom {
   border:0px;
   min-height: 0px;
@@ -6,12 +91,4 @@
 .ng-select.custom .ng-select-container  {
   min-height: 0px;
   border-radius: 0;
-}
-
-.card-bg {
-  background-color: #f0f7fc;
-}
-
-.myClaim {
-  margin-top: 40px
 }
