--- a/frontend/src/app/components/claims/claims.component.scss
+++ b/frontend/src/app/components/claims/claims.component.scss
@@ -42,7 +42,7 @@
 }
 
 .panel-header {
-  font-size: 20px;
+  max-font-size: 20px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
