--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -127,6 +127,15 @@ body {
   border-color: #00b2a8;
 }
 
+.theme-green .bs-datepicker-body table td.week span {
+  color: #00b2a8;
+}
+
+.theme-green .bs-datepicker-head {
+  background-color: #00b2a8;
+  border-color: #00b2a8;
+}
+
 .hex-blue-color {
   background-color: #ebedf0;
 }
