--- a/frontend/src/app/components/profile/my-agents/my-agents.component.html
+++ b/frontend/src/app/components/profile/my-agents/my-agents.component.html
@@ -22,7 +22,7 @@
         <th translate>Сумма ПС</th>
       </tr>
       </thead>
-      <tbody style="cursor: pointer">
+      <tbody class="bg-white">
       <tr *ngFor="let agent of agentData;let i = index">
         <td>
           <!--<a [routerLink]="['/create-claim/', claim?.id]">{{claim.id}}</a>-->
